Fix: 모달 z-index 999설정 & 네브바 대회일정페이지일때만 대회일정 폰트 볼드처리

--- a/najuha-fronted/src/components/Paymentmodal.css
+++ b/najuha-fronted/src/components/Paymentmodal.css
@@ -10,7 +10,7 @@
   justify-content: center;
   align-items: center;
   letter-spacing: -0.01rem;
-  z-index: 200;
+  z-index: 999;
 }
 
 /* modal창 */
